hphp/test/quick/typehint_callable.php.expectf
bool(true)

Catchable fatal error: Argument 1 passed to a() must be an instance of callable, string given in %s on line 9
